apply plugin: 'java-library'
apply plugin: 'groovy'

sourceCompatibility = JavaVersion.VERSION_1_10

repositories {
    jcenter()
}

dependencies {
    testCompile "org.codehaus.groovy:groovy-all:2.5.2"
    testCompile "org.spockframework:spock-core:1.2-groovy-2.5"
}

ext.moduleName = 'io.wangler.cartesian'

compileJava {
    inputs.property("moduleName", moduleName)
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
        ]
        classpath = files()
    }
}

test {

    /*testLogging {
        events "passed", "skipped", "failed"
    }*/

    reports {
        html.enabled = true
    }

    inputs.property("moduleName", moduleName)
    /*doFirst {
        jvmArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'ALL-MODULE-PATH',
                '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
        ]
        classpath = files()
    }*/
}

jar {
    inputs.property("moduleName", moduleName)
    manifest {
        attributes('Automatic-Module-Name': moduleName)
    }
}